[project]
name = "bunnyland-cryptidsim"
version = "0.2.0"
description = "Out-of-tree Bunnyland plugin: a cryptozoology expansion pack — rare, elusive mystery creatures, uncertain sightings, and a confirm-over-time case-file loop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bunnyland",
    "pydantic>=2.0",
    "relics",
]

[project.entry-points."bunnyland.plugins"]
"bunnyland.cryptidsim" = "bunnyland_cryptidsim.plugin:bunnyland_plugins"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnyland_cryptidsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
